dist/1.0/bin/sample/retrieveUnpackaged/objects/CTask__c.object
<CustomObject>
    <description>Custom Task object</description>
    <fields>
        <fullName>A_End_Solution__c</fullName>
        <description>Descriptive field for Solution Details</description>
        <inlineHelpText>Descriptive field for Solution Details</inlineHelpText>
        <label>A End Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A_End__c</fullName>
        <label>A End</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <description>Date of acceptance decision</description>
        <inlineHelpText>Date of acceptance decision</inlineHelpText>
        <label>Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <description>Date of Task acceptance for processing</description>
        <inlineHelpText>Date of Task acceptance for processing</inlineHelpText>
        <label>Task Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Related Account</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Billing_Configruation_End_Date__c</fullName>
        <label>Actual Billing Configruation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Billing_Configruation_Start_Date__c</fullName>
        <label>Actual Billing Configruation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Billing_Start_OL__c</fullName>
        <description>Actual Billing Start Date as on the Order Line Selected on Task</description>
        <formula>Order_Line__r.Actual_Billing_Start__c</formula>
        <inlineHelpText>Actual Billing Start Date as on the Order Line Selected on Task</inlineHelpText>
        <label>Actual Billing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Deinstallation_Date__c</fullName>
        <label>Actual De-installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Disconnection_Date__c</fullName>
        <label>Actual Disconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Insallation_Date__c</fullName>
        <description>Actual installation date after disconnection</description>
        <inlineHelpText>Actual installation date after disconnection</inlineHelpText>
        <label>Actual Insallation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Provisioning_End_Date__c</fullName>
        <description>Date when GTS has technically delivered the service. To be propagated to Provisioning Succeeded on Request. Date to be provided by Provisioning.</description>
        <inlineHelpText>Date when GTS has technically delivered the service. To be propagated to Provisioning Succeeded on Request. Date to be provided by Provisioning.</inlineHelpText>
        <label>Actual Provisioning End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Provisioning_Start_Date__c</fullName>
        <description>Actual Provisioning Start Date to be provided by Provisioning.</description>
        <inlineHelpText>Actual Provisioning Start Date to be provided by Provisioning.</inlineHelpText>
        <label>Actual Provisioning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Request Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_pricing_information__c</fullName>
        <label>Costing Lines Info.</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Service Credit Amount</description>
        <inlineHelpText>Service Credit Amount</inlineHelpText>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date of approval decision</description>
        <inlineHelpText>Date of approval decision</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_by__c</fullName>
        <description>User that has entered approval decision (Pricing/Proposal Tasks)</description>
        <inlineHelpText>User that has entered approval decision (Pricing/Proposal Tasks)</inlineHelpText>
        <label>Approval by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Approval decision Yes/No</description>
        <inlineHelpText>Approval decision Yes/No</inlineHelpText>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssignedQueue__c</fullName>
        <description>Queue for Assignment</description>
        <inlineHelpText>Queue for Assignment</inlineHelpText>
        <label>AssignedQueue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Queue__c</fullName>
        <description>Field used in case when AssignedQueue is set. Then the value of the field is the name of the queue (not id, as it is on AssignedQueue)</description>
        <label>Assigned Queue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assign to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_End_Contact__c</fullName>
        <label>B End Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_End_OL__c</fullName>
        <label>B-End</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_End_Solution__c</fullName>
        <description>Descriptive field for Solution Details</description>
        <inlineHelpText>Descriptive field for Solution Details</inlineHelpText>
        <label>B End Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B_End__c</fullName>
        <label>B End</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bandwidth_OL__c</fullName>
        <description>Bandwidth from Order Line</description>
        <inlineHelpText>Bandwidth from Order Line</inlineHelpText>
        <label>Bandwidth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_OL__c</fullName>
        <description>Billing Account as on the Order Line selected on Task</description>
        <formula>Order_Line__r.OrderLookup__r.Billing_Account_Name__c</formula>
        <inlineHelpText>Billing Account as on the Order Line selected on Task</inlineHelpText>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account related to the Task</description>
        <inlineHelpText>Billing Account related to the Task</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Customer_Date__c</fullName>
        <description>Billing Customer Date</description>
        <formula>IF( ISNULL( Start_Billing_Customer__c ) , Change_Billing_Customer__c , Start_Billing_Customer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Customer Date</inlineHelpText>
        <label>Billing Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>Type of Billing</description>
        <inlineHelpText>Type of Billing</inlineHelpText>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-GTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Check_Log__c</fullName>
        <label>Credit Check Log</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPE__c</fullName>
        <label>CPE</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CProduct__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +Request__r.CProduct__r.Id , Request__r.CProduct__r.Name , &quot;_top&quot;)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>Summary Capex One-off cost of all items</description>
        <inlineHelpText>Summary Capex One-off cost of all items</inlineHelpText>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <description>Summary Capex cost of all items</description>
        <inlineHelpText>Summary Capex cost of all items</inlineHelpText>
        <label>Capex Re-useable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_backbone__c</fullName>
        <label>Capex (backbone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_last_mile__c</fullName>
        <label>Capex (last mile)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <description>Used only for Customer Care tasks;</description>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Services__c</fullName>
        <description>Used only for tasks created from Cases</description>
        <label>Case Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Used only for Tasks created for Cases (Customer Care tasks);</description>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Flow__c</fullName>
        <description>Proposal Revenue - (Opex One–off + Opex Monthly* Contract Length) - Total Capex</description>
        <formula>Proposal_Revenue__c - (Opex_One_off__c +  Opex_Monthly__c  *Contract_Length__c ) - Total_Capex__c</formula>
        <inlineHelpText>Proposal Revenue - (Opex One–off + Opex Monthly* Contract Length) - Total Capex</inlineHelpText>
        <label>Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Design and Costing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Plan Rollback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to eWęgorz (PL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Sales Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Customer__c</fullName>
        <description>Date, when customer&apos;s billing should be changed or stopped</description>
        <inlineHelpText>Date, when customer&apos;s billing should be changed or stopped</inlineHelpText>
        <label>Change Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Details__c</fullName>
        <description>Descriptive information about changes made (i.e to billing) as a result of task delivery</description>
        <inlineHelpText>Descriptive information about changes made (i.e to billing) as a result of task delivery</inlineHelpText>
        <label>Change Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Circuit_Data_ID__c</fullName>
        <description>ID of related Circuit Data object</description>
        <inlineHelpText>ID of related Circuit Data object</inlineHelpText>
        <label>Circuit Data ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_GP__c</fullName>
        <label>Circuit GP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ID_OL__c</fullName>
        <label>Circuit ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Id_OSS_Link__c</fullName>
        <description>con3: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/sand_box/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID_OL__c , Circuit_ID_OL__c) 
test: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID_OL__c , Circuit_ID_OL__c) 
prod: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID_OL__c , Circuit_ID_OL__c)</description>
        <formula>if( $Organization.Id=&apos;00D200000008d5u&apos;,HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID_OL__c , Circuit_ID_OL__c),
HYPERLINK(&apos;http://dione1.gtsgroup.cz/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID_OL__c , Circuit_ID_OL__c))</formula>
        <label>Circuit ID Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Information__c</fullName>
        <description>Details of Circuit</description>
        <formula>IF( ISBLANK( Circuit_Data_ID__c ), &apos;&apos;,  HYPERLINK(&apos;/&apos; + Circuit_Data_ID__c, &apos;view&apos;, &apos;_top&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Details of Circuit</inlineHelpText>
        <label>Circuit Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Date/Time when Task has been closed or cancelled</description>
        <inlineHelpText>Date/Time when Task has been closed or cancelled</inlineHelpText>
        <label>Task Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Task comments</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Delivery_Date__c</fullName>
        <description>OrderLine Committed Delivery Date</description>
        <formula>Order_Line__r.CommittedDeliveryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Committed Delivery Date from related OrderLine</inlineHelpText>
        <label>Committed Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedRequests__c</fullName>
        <description>Successfully completed ESB requests</description>
        <label>Completed Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_B__c</fullName>
        <formula>IF(Request__r.B_End__r.Contact__c  ==&apos;&apos;,IF(  Request__r.Technical_Contact_Name_B__c ==&apos;&apos;,  Request__r.Technical_Contact_B__c, Request__r.Technical_Contact_Name_B__c) ,Request__r.B_End__r.Contact__c )</formula>
        <label>Contact B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months_OL__c</fullName>
        <description>Contract Length [Months] as on OrderLine selected on the Task</description>
        <formula>Order_Line__r.Contract_Length_formula__c</formula>
        <inlineHelpText>Contract Length [Months] as on OrderLine selected on the Task</inlineHelpText>
        <label>Contract Length [Months]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Contract Length in months</description>
        <inlineHelpText>Contract Length in months</inlineHelpText>
        <label>Contract Length [Months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_temp__c</fullName>
        <label>Contract_temp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costing_Task_Id__c</fullName>
        <description>Id of Costing Task related with this task</description>
        <inlineHelpText>Id of Costing Task related with this task</inlineHelpText>
        <label>Costing Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costing_Task_Name__c</fullName>
        <description>Name of Costing Task related to this task.</description>
        <inlineHelpText>Name of Costing Task related to this task.</inlineHelpText>
        <label>Costing Task Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costing_Task__c</fullName>
        <description>Link to Costing Task</description>
        <formula>HYPERLINK(Costing_Task_Id__c, Costing_Task_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Costing Task</inlineHelpText>
        <label>Costing Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Costing_Unit__c</fullName>
        <description>Costing Unit</description>
        <inlineHelpText>Costing Unit</inlineHelpText>
        <label>Costing Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Accepted__c</fullName>
        <description>Customer decision: Yes/No</description>
        <inlineHelpText>Customer decision: Yes/No</inlineHelpText>
        <label>Customer Accepted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Expected_Delivery__c</fullName>
        <label>Customer Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deinstalled_Capex__c</fullName>
        <label>Deinstalled Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delay_Calculation__c</fullName>
        <label>Delay Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delay_Hours__c</fullName>
        <description>Numbers of hours of delay after which Task will be started.</description>
        <inlineHelpText>Numbers of hours of delay after which Task will be started.</inlineHelpText>
        <label>Delay Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Task will start with delay</description>
        <inlineHelpText>If checked, Task will start with delay</inlineHelpText>
        <label>Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 5 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 8 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 -11 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - 14 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - 17 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 20 weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description to be added to created Task. Information about task to be performed.</description>
        <inlineHelpText>Description to be added to created Task. Information about task to be performed.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for CC requirement - Care - 351;</description>
        <inlineHelpText>Task marked as done, will not be visible in the queue view.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Completed_Interval__c</fullName>
        <description>Task Completed - Due Date</description>
        <formula>PP_Task_Completed__c - Due_DateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Task Completed - Due Date</inlineHelpText>
        <label>Due/Completed Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_DateTime__c</fullName>
        <description>DateTime to which given Task should be done (finished) by assignee</description>
        <inlineHelpText>Date and exact time to which given Task should be done (finished) by assignee</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_Filter__c</fullName>
        <description>Due Date for Reporting and Filtering</description>
        <formula>DATEVALUE( Due_DateTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Due Date for Reporting and Filtering</inlineHelpText>
        <label>Due Date Filter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Date to which given Task should be done (finished) by assignee</description>
        <inlineHelpText>Date to which given Task should be done (finished) by assignee</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Billing_Customer_OL__c</fullName>
        <description>End Billing Customer Date as on the Order Line selected on Task</description>
        <formula>Order_Line__r.End_Billing_Customer__c</formula>
        <inlineHelpText>End Billing Customer Date as on the Order Line selected on Task</inlineHelpText>
        <label>End Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EscalateNotAssigned__c</fullName>
        <description>Date/Time when escalation about assignment should be sent</description>
        <label>Escalate When Not Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EscalationLevel1__c</fullName>
        <description>User, who receives 1st level escalation</description>
        <inlineHelpText>User, who receives 1st level escalation</inlineHelpText>
        <label>Escalation Level 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EscalationLevel2__c</fullName>
        <description>User, who receives 2nd level escalation</description>
        <inlineHelpText>User, who receives 2nd level escalation</inlineHelpText>
        <label>Escalation Level 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EscalationLevel3__c</fullName>
        <description>User, who receives 3rd level escalation</description>
        <inlineHelpText>User, who receives 3rd level escalation</inlineHelpText>
        <label>Escalation Level 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EscalationTime__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Indicates after waht time (hours) escalation about unassignment should be changed</description>
        <label>Escalation Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finshed_Date__c</fullName>
        <description>Date/Time when Task has been done by assigned person</description>
        <inlineHelpText>Date/Time when Task has been done by assigned person</inlineHelpText>
        <label>Task Finshed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Firm_Costing__c</fullName>
        <description>Relation to Firm Costing Task</description>
        <label>Related Costing</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Tasks (Costing)</relationshipLabel>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_redundancy__c</fullName>
        <description>Full redundancy</description>
        <inlineHelpText>Full redundancy</inlineHelpText>
        <label>Full redundancy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTS_Committed_Date__c</fullName>
        <description>Date to GTS is obligated to deliver</description>
        <inlineHelpText>Date to GTS is obligated to deliver</inlineHelpText>
        <label>GTS Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Order&apos;s GTS Location (GSDQS-55 - used for reporting)</description>
        <formula>Order_Line__r.GTS_Location_from_Order__c</formula>
        <inlineHelpText>Order&apos;s GTS Location</inlineHelpText>
        <label>GTS Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_costing_lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If check then Costing Lines will be generated – old functionality of Request Quotation and Pricing</description>
        <inlineHelpText>If check then Costing Lines will be generated – old functionality of Request Quotation and Pricing</inlineHelpText>
        <label>Costing Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percent__c</fullName>
        <description>=(Gross Margin / Proposal Revenue)*100</description>
        <formula>Gross_Margin__c  /  Proposal_Revenue__c</formula>
        <inlineHelpText>=(Gross Margin / Proposal Revenue)*100</inlineHelpText>
        <label>Gross Margin [%]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Proposal Revenue - (Opex One-off + Opex Monthly*Contract Length)</description>
        <formula>Proposal_Revenue__c - (Opex_One_off__c + Opex_Monthly__c  * Contract_Length__c )</formula>
        <inlineHelpText>Proposal Revenue - (Opex One-off + Opex Monthly*Contract Length)</inlineHelpText>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IStask__c</fullName>
        <description>Field which states if task belongs to IS or COLORADO area.</description>
        <formula>IF( OR($RecordType.Name = &apos;Bid&apos;, $RecordType.Name = &apos;Billing&apos;, $RecordType.Name = &apos;Contract&apos;, $RecordType.Name = &apos;Design and Costing&apos;, $RecordType.Name = &apos;Lead&apos;, $RecordType.Name = &apos;Local Opportunity&apos;, $RecordType.Name = &apos;NEW Billing&apos;, $RecordType.Name = &apos;NEW Provisioning&apos;, $RecordType.Name = &apos;Opportunity Bid&apos;, $RecordType.Name = &apos;Opportunity Costing&apos;, $RecordType.Name = &apos;Opportunity Pricing&apos;, $RecordType.Name = &apos;Pricing&apos;, $RecordType.Name = &apos;Regional Opportunity&apos;, $RecordType.Name = &apos;SO Billing&apos;, $RecordType.Name = &apos;SO Provisioning&apos;, $RecordType.Name = &apos;Sales Support Costing&apos;, $RecordType.Name = &apos;Sales Support Provisioning&apos;, $RecordType.Name = &apos;Service Acceptance&apos;, $RecordType.Name = &apos;Service Credit&apos;) ,
&apos;IS&apos;, &apos;COLORADO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field which states if task belongs to IS or COLORADO area.</inlineHelpText>
        <label>IStask</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_OL__c</fullName>
        <description>Interface copied from Order Line.</description>
        <label>Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAction__c</fullName>
        <description>Last action performed</description>
        <label>Last Action</label>
        <type>TextArea</type>
    </fields>
</CustomObject>